# shot_detection

./: .gitignore  CMakeLists.txt  accessDirectory.h  byBgrThresholdAndColorThemes.cpp  byBgrThresholdOnly.cpp  function.h  inspectThemesConsensus.cpp  intValue2Name.cpp  judgeByBgrThreshold.cpp  kMeansColorSubtraction.cpp  main.cpp  selectPrincipalColorThemes.cpp  testExtractedColor.cpp
